--- a/css/main.css
+++ b/css/main.css
@@ -372,8 +372,8 @@ h6 {
 
 	.slider .names {
 		
-		background: none;
-	    	color: #000000;
+		background: rgba(255, 255, 255, 0.6);
+	    	color: #725656;
 	    	font-family: 'Great Vibes',cursive;
 	    	font-size: 100px;
 	    	position: absolute;
