--- a/css/main.css
+++ b/css/main.css
@@ -813,7 +813,7 @@ h6 {
 	#thebrideside {
 		margin-bottom: 10em;
 		font-size: 15px;
-		text-align: justify;
+		text-align: Center;
 		min-height: 100em;
 	}
 
