--- a/css/main.css
+++ b/css/main.css
@@ -820,7 +820,7 @@ h6 {
 	
 	#thebrideside h5{
 		font-family: 'Cinzel',serif;
-		text-align: justify;
+		text-align: center;
 		font-size: 20px;
 		color: #818181;
 		line-height: 22px;
